--- a/dosierpopot/Makefile
+++ b/dosierpopot/Makefile
@@ -4,7 +4,8 @@ CC = cc
 
 CFLAGS = -Werror -Wextra -Wall -g3
 
-SOURCES = test.c
+SOURCES =	test_strlen.c \
+			test_atoi.c
 
 MAKEBASE = libunit_rush/Makefile
 
@@ -14,13 +15,22 @@ all: $(NAME)
 
 $(NAME): $(OBJ)
 	ar -rcs $@ $(OBJ)
+#$(NAME): $(MAKEBASE) $(OBJ)
+#	cp -rf $(MAKEBASE) $(NAME)
+#	ar -rcs $@ $(OBJ)
+#$(MAKEBASE):
+#	make -C ..
 
+la: 
 clean:
 	rm -rf $(OBJ)
+	make -C .. clean
 
 fclean: clean
 	rm -rf $(NAME)
+	make -C .. fclean
 
 re: fclean all
 
 .PHONY : all clean fclean re
+
