j ai oublier ca

--- a/real_test/Makefile
+++ b/real_test/Makefile
@@ -20,7 +20,8 @@ SOURCE = 	strlen_test/strlen1.c \
 			str_join_test/strjoin1.c \
 			str_join_test/strjoin2.c \
 			str_join_test/strjoin3.c \
-			str_join_test/strjoin4.c
+			str_join_test/strjoin4.c \
+			
 
 
 
