avec ca _ cest mieux

--- a/real_test/Makefile
+++ b/real_test/Makefile
@@ -16,24 +16,24 @@ LIBFT = ../resource/libft.a
 LIBFT_DIR = ../resource/
 
 
-SOURCE = 	strlen_test/00str.c \
-			strlen_test/01empty.c \
-			strlen_test/02NULL.c \
-			strlen_test/03charspe.c \
-			atoi_test/00intmax.c \
-			atoi_test/01intmin.c \
-			atoi_test/02empty.c \
-			atoi_test/03normal.c \
-			atoi_test/04space.c \
-			putstr_test/00str.c \
-			putstr_test/01charspe.c \
-			putstr_test/02strspe.c \
-			putstr_test/03empty.c \
-			str_join_test/00normal.c \
-			str_join_test/01NULL.c \
-			str_join_test/02strempty.c \
-			str_join_test/03emptystr.c \
-			isalpha_test/00char.c
+SOURCE = 	strlen_test/00_str.c \
+			strlen_test/01_empty.c \
+			strlen_test/02_NULL.c \
+			strlen_test/03_charspe.c \
+			atoi_test/00_intmax.c \
+			atoi_test/01_intmin.c \
+			atoi_test/02_empty.c \
+			atoi_test/03_normal.c \
+			atoi_test/04_space.c \
+			putstr_test/00_str.c \
+			putstr_test/01_charspe.c \
+			putstr_test/02_strspe.c \
+			putstr_test/03_empty.c \
+			str_join_test/00_normal.c \
+			str_join_test/01_NULL.c \
+			str_join_test/02_strempty.c \
+			str_join_test/03_emptystr.c \
+			isalpha_test/00_char.c
 
 
 
